[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui/lockpad/lockpad_background.png" type="Texture" id=1]
[ext_resource path="res://assets/shadermaterials/JitterFreeMaterial.tres" type="Material" id=2]
[ext_resource path="res://assets/ui/menu/button_yes.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/menu/button_yes_disabled.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/menu/button_yes_hovered.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/menu/button_no_hovered.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/menu/button_no_disabled.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/menu/button_no.png" type="Texture" id=8]
[ext_resource path="res://src/Menu/AreYouSurePopUp.gd" type="Script" id=9]

[node name="AreYouSure" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0470588, 0.0313726, 0.0901961, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="NinePatchRect" parent="."]
material = ExtResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -65.0
margin_right = 95.0
margin_bottom = 65.0
rect_min_size = Vector2( 190, 130 )
texture = ExtResource( 1 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="DialogBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -56.0
margin_right = 85.0
margin_bottom = 56.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="DialogBox/Content"]
margin_right = 170.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 52 )

[node name="Question" type="Label" parent="DialogBox/Content/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -31.0
margin_right = 1.0
margin_bottom = 2.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.0470588, 0.0313726, 0.0901961, 1 )
text = "save and
exit game?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="DialogBox/Content"]
margin_top = 62.0
margin_right = 170.0
margin_bottom = 110.0
custom_constants/separation = 20

[node name="Yes" type="TextureButton" parent="DialogBox/Content/Buttons"]
material = ExtResource( 2 )
margin_right = 75.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 4 )

[node name="No" type="TextureButton" parent="DialogBox/Content/Buttons"]
material = ExtResource( 2 )
margin_left = 95.0
margin_right = 170.0
margin_bottom = 48.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 7 )
[connection signal="pressed" from="DialogBox/Content/Buttons/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="DialogBox/Content/Buttons/No" to="." method="_on_No_pressed"]
